# python-pipeline

./: .gitignore  404.html  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pyrightconfig.json  pytest.ini  sitemap.xml
.devcontainer/: devcontainer.json
.devcontainer/etc/bash-aliases/: clean-cache--aliases.sh  clean_cache_aliases.sh  deploy--aliases.sh  git_aliases.sh  package_aliases.sh
.devcontainer/scripts/: post-create.sh
.github/workflows/: format-ruff.yaml  lint-ruff.yaml  release.yaml  run-tests.yml  security-zizmor.yaml  test.yaml  test.yml
api/core/: index.html
api/processors/: index.html
api/types/: index.html
assets/css/: extra.css
docker/local/: Dockerfile  docker-compose.yml
docker/local/etc/: bash_aliases  supervisord.conf
docs/: index.md
docs/api/: core.md  processors.md  types.md
docs/assets/css/: extra-pymdownx.css  extra-pymdownx.css.map
jupyter/: 01-instructions.ipynb  01-playground.ipynb  02-streams.ipynb  03-pipeline-factory.ipynb
search/: search_index.json
src/_api/: __init__.py
src/_api/core/: __init__.py  _app.toml
src/_api/core/final/: __init__.py  chained_processor.py  pipeline.py  pipeline_factory.py  pipeline_factory_interface.py  pipeline_interface.py  processor.py  processor_interface.py  stage.py  stage_callable.py  stage_interface.py  types.py
src/_api/core/plugins/: __init__.py
src/_api/processors/: __init__.py
src/_api/processors/chained_processor/: __init__.py  chained_pipeline.py  chained_processor.py
src/_api/processors/interruptible_processor/: __init__.py  interruptible_pipeline.py  interruptible_processor.py
src/thecodecrate_pipeline/: __init__.py
src/thecodecrate_pipeline/classes/: command.py  command_interface.py  pipeline.py  pipeline_builder.py  pipeline_builder_interface.py  pipeline_factory.py  pipeline_factory_interface.py  pipeline_interface.py  processor.py  processor_interface.py  stage.py  stage_callable.py  stage_interface.py  types.py
src/thecodecrate_pipeline/core/final/: pipeline.py  pipeline_factory.py  pipeline_factory_interface.py  pipeline_interface.py  processor.py  processor_interface.py  stage.py  stage_callable.py  stage_interface.py  types.py
src/thecodecrate_pipeline/core/pipeline/: pipeline.py  pipeline_callable.py  pipeline_interface.py
src/thecodecrate_pipeline/core/pipeline_builder/: pipeline_builder.py  pipeline_builder_interface.py
src/thecodecrate_pipeline/modules/processors/: chained_processor.py  interruptible_processor.py
src/thecodecrate_pipeline/partials/with_base/: pipeline.py  pipeline_interface.py  stage.py  stage_callable.py  stage_interface.py  type_payload.py  type_pipeline_callable.py  type_pipeline_item.py
src/thecodecrate_pipeline/partials/with_builder_methods/: pipeline_interface_mixin.py  pipeline_mixin.py  pipelineable_facade.py
src/thecodecrate_pipeline/partials/with_pipeline_as_immutable/: pipeline_interface_mixin.py  pipeline_mixin.py
src/thecodecrate_pipeline/partials/with_pipeline_as_list/: pipeline_interface_mixin.py  pipeline_mixin.py
src/thecodecrate_pipeline/partials/with_pipeline_as_stage/: pipeline_interface_mixin.py  pipeline_mixin.py  stage_facade.py
src/thecodecrate_pipeline/partials/with_pipeline_commands/: command_facade.py  pipeline_interface_mixin.py  pipeline_mixin.py  processor_facade.py
src/thecodecrate_pipeline/partials/with_pipeline_declared_stages/: pipeline_interface_mixin.py  pipeline_mixin.py  stage_facade.py
src/thecodecrate_pipeline/partials/with_pipeline_factory/: pipeline_factory.py  pipeline_factory_interface.py
src/thecodecrate_pipeline/partials/with_pipeline_processor/: pipeline_factory_interface_mixin.py  pipeline_factory_mixin.py  pipeline_interface_mixin.py  pipeline_mixin.py  processor.py  processor_interface.py
src/thecodecrate_pipeline/partials/with_pipelineable_methods/: pipeline_interface_mixin.py  pipeline_mixin.py
src/thecodecrate_pipeline/partials/with_processor_commands/: command.py  command_interface.py  pipeline_interface_mixin.py  pipeline_mixin.py  processing_strategy.py  processing_strategy_interface.py  processor_facade.py  processor_interface_mixin.py  processor_mixin.py
src/thecodecrate_pipeline/partials/with_stage_as_callable/: stage_interface_mixin.py  stage_mixin.py
src/thecodecrate_pipeline/processors/: __init__.py  chained_processor.py  interruptible_processor.py
src/thecodecrate_pipeline/processors/chained_processor/: chained_command.py  chained_pipeline.py  chained_processor.py
src/thecodecrate_pipeline/processors/interruptible_processor/: interruptible_pipeline.py  interruptible_processor.py
src/thecodecrate_pipeline/processors/stateful_chained_processor/: stateful_chained_command.py  stateful_chained_pipeline.py  stateful_chained_processor.py
src/thecodecrate_pipeline/types/: __init__.py
tests/: daniel_modular_programming_design.md  modular_fragmented_design.md  spec-001--class-composition-with-partial-classes.md  spec-001--partial-classes-single.md  spec-001-partial-classes-single.md  test_commands.py  test_linting.py  test_pipeline.py  test_pipeline_builder.py  test_pipeline_factory.py  test_pipeline_streams.py  test_processors.py  test_stage.py
tests/_old/: pipeline.py  pipeline_factory.py  processors.py
tests/stubs/: stub_int_stages.py  stub_processor.py  stub_stage.py  stub_stage_with_custom_args.py  stub_stages_int.py
(+164 files in other folders)
