[project]
name = "thecodecrate-pipeline"
version = "1.25.0"
description = "This package provides a pipeline pattern implementation"
readme = "README.md"
authors = [{ name = "TheCodeCrate", email = "loureiro.rg@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["data pipelines"]
dependencies = []
requires-python = ">=3.13"

[project.urls]
repository = "https://github.com/thecodecrate/python-pipeline"
documentation = "https://github.com/thecodecrate/python-pipeline"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "bumpver>=2024.1130",
    "ruff>=0.8.2",
    "ipykernel>=6.29.5",
    "debugpy>=1.8.9",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-material>=9.5.48",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-minify-plugin>=0.8.0",
    "black>=24.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79

[tool.bumpver]
current_version = "1.25.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "🚀 feat: bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/thecodecrate_pipeline/__init__.py" = ['{version}']

[tool.setuptools.package-data]
"thecodecrate_pipeline" = ["py.typed"]

[tool.hatch.build.targets.wheel]
packages = ["src/thecodecrate_pipeline", "src/_api"]
